apps/backend-test-app/resources/overlays/was-cluster/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-test-app
spec:
  replicas: 2
  template:
    metadata:
      annotations:
        instrumentation.opentelemetry.io/inject-java: "opentelemetry-operator-system/java-instrumentation"
    spec:
      containers:
      - name: backend-test-app
        image: ACCOUNT_NUMBER.dkr.ecr.ap-northeast-1.amazonaws.com/test-app/backend-test-app:backend-test-app-1.0.4.4
        resources:
          requests:
            memory: 512Mi                                               
            cpu: 500m
          limits:
            memory: 2Gi                                             
            cpu: 1000m
