apps/backend-test-app/resources/overlays/was-cluster/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-test-app-ingress
  annotations:
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-1:ACCOUNT_NUMBER:certificate/111111-2222-3333-44444
    alb.ingress.kubernetes.io/security-groups: sg-1111222233334444
    alb.ingress.kubernetes.io/subnets: subnet-1111222233334444, subnet-1111222233334444
    alb.ingress.kubernetes.io/load-balancer-name: alb-was-test-stg-an1-01
    alb.ingress.kubernetes.io/load-balancer-attributes: routing.http.drop_invalid_header_fields.enabled=true, access_logs.s3.enabled=true,access_logs.s3.bucket=s3-alb-accesslogs-test-stg-an1-01,access_logs.s3.prefix=was, deletion_protection.enabled=true
    alb.ingress.kubernetes.io/group.name: test-stg-was
spec:
  rules:
    - host: stg.test-api.example.com
      http:
        paths:
        - path: "/"
          pathType: Prefix
          backend:
            service:
              name: backend-test-app-service
              port:
                number: 80
